[project]
name = "quantization-samples"
version = "0.1.0"
description = "Learn about quantization with examples"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.3.0",
    "fbgemm-gpu-genai>=1.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchao>=0.14.1",
    "torchinfo>=1.8.0",
    "torchtext>=0.18.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "watermark>=2.5.0",
]
